--- a/src/jacobTodoList/mainwindow.fxml
+++ b/src/jacobTodoList/mainwindow.fxml
@@ -1,15 +1,35 @@
-
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.text.Font?>
 <BorderPane fx:controller="jacobTodoList.Controller"
-            xmlns:fx="http://javafx.com/fxml" >
+            xmlns:fx="http://javafx.com/fxml">
     <left>
-        <ListView fx:id="todoListView" onMouseClicked="#handleClickListView">
+        <ListView fx:id="todoListView" >
 
         </ListView>
     </left>
     <center>
-        <TextArea fx:id="itemDetailsTextArea"/>
+        <VBox style="-fx-background-color: white">
+            <TextArea fx:id="itemDetailsTextArea" VBox.vgrow="ALWAYS" />
+            <HBox>
+                <Label text="Due : " style="-fx-background-color: cornflowerblue">
+                    <font>
+                        <Font name="Times New Roman bold" size="20"/>
+                    </font>
+                </Label>
+                <Label fx:id="deadLineLabel" style="-fx-background-color: cornflowerblue">
+                    <font>
+                        <Font name="Times New Roman bold" size="20"/>
+
+                    </font>
+                </Label>
+            </HBox>
+
+        </VBox>
+
     </center>
 </BorderPane>
